[project]
name = "engunits"
dynamic = ["version"]
description = "Typed engineering quantities with SI-default storage, built on pint"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "pint>=0.24",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.9",
]
docs = [
    "sphinx>=8.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]

[build-system]
requires = ["setuptools>=75.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-q"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["engunits"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
